	and optional integrated-into-dtrace build.
	* libdtrace-ctf.ver: Likewise with this new version script.
	* uts/Build (HEADERS_INSTALL): Drop the CTF header files.

	* libctf/llib-lctf: Delete, lint libraries are obsolete.
	* uts/common/sys/ctfs.h: Delete, we do not have an in-kernel CTF
	filesystem.
	* uts/common/sys/ctfs_impl.h: Likewise.

	* GNUmakefile (PROJECT): New, name this project (used by
	libdtrace-ctf Build files to detect building as part of dtrace).
	(warnings): Fix the spelling of DTrace.
	(INVARIANT_CFLAGS): -DCTF_OLD_VERSIONS is only needed when
	building libctf itself, drop from global flags.
	(CPPFLAGS): If we have libdtrace-ctf as an initialized submodule,
	point the header search path into it.

	* dtrace-utils.spec: Require libdtrace.ctf (and zlib, omitted
	earlier by mistake).  Other tiny cleanups.

	* libdtrace/Build (libdtrace-build_CPPFLAGS): No longer need
	-Ilibctf.
	(LIBS): Delete, no static library is required.
	(libdtrace_LIBS): Depend on -ldtrace-ctf. Look in the objdir for
	libraries (in case of a build with an initialized submodule).
	(libdtrace_LIBSOURCES): Drop libctf.
	(libdtrace_SECONDARY): Likewise.

	* libproc/Build (libproc_CPPFLAGS): No longer need -Ilibctf.
	* cmd/Build (dtrace_CPPFLAGS): Likewise.
	(dtrace_DEPS): No longer need libctf.a.
	(dtrace_LIBS): Link against -ldtrace-ctf rather than -lctf.
	* test/utils/Build: Likewise.

	* test/triggers/.gitignore: Ignore everything other than C files,
	a single shell-script-based trigger and the Build file. (In
	particular, ignore compiled triggers.)

	* GNUmakefile (gtags): GNU GLOBAL support.
	(tags): Fix filename.
	(realclean): Like clean, only removes tags files too.

	* Makefunctions (describe-install-target): Strip the
	path from the name.
	(lib-template): Expand the TARGET in the description of the built
	library.
	* libdtrace/Build (install): Strip the path from the installed
	object descriptions.
	* uts/Build (install): Likewise.
